# remote_control

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  Cargo.toml  README.md  TODO.txt  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.base.json  tsconfig.node.json  tsconfig.worker.json  user_config.json  vite.config.js  vite.config.ts
.cargo/: config.toml
docs/: fedora-kde-wayland.md
src/: config.rs  main.rs  state.rs
src/api/: auth.rs  files.rs  middleware.rs  mod.rs  router.rs  stream.rs  system.rs  tasks.rs
src/realtime/: event_names.rs  events.rs  handlers.rs  mod.rs
src/services/: audio.rs  camera.rs  files.rs  input.rs  mod.rs  owned_worker.rs  screen.rs  shell.rs  system.rs  tasks.rs  webrtc_session.rs
src/services/audio/: linux.rs  mod.rs  windows.rs
src/services/input/: keymap.rs  linux.rs  mod.rs  windows.rs
src/services/screen/: encoder.rs  linux.rs  mod.rs  windows.rs
src/services/system/: linux.rs  mod.rs  windows.rs
src/utils/: auth.rs  error.rs  mod.rs
static/: index.html  input.css  login.html  package.json  pnpm-lock.yaml
static/css/: styles.css  tailwind.css
static/js/: app.js  app.ts  global.d.ts  login.js  main.js
static/js/core/: navigation.js  navigation.ts  shortcuts.js  shortcuts.ts  socket-events.ts  socket.js  socket.ts
static/js/features/audio/: audio-converter.worker.js  audio-converter.worker.ts  audio-manager.js  audio-manager.ts  audio-worklet-processor.js  audioworklet-globals.d.ts
static/js/features/camera/: camera.js  camera.ts
static/js/features/files/: access-checker.js  access-checker.ts  breadcrumbs.js  drop-zone.js  drop-zone.ts  file-list-renderer.js  file-list-renderer.ts  file-manager.js  file-manager.ts  path-utils.js  path-utils.ts  upload-service.js  upload-service.ts
static/js/features/input/: capture-state.js  capture-state.ts  input-controller.js  input-controller.ts  input-grid.js  input-grid.ts  keyboard-shortcuts.js  keyboard-shortcuts.ts  pointer-input.js  pointer-input.ts
static/js/features/shell/: shell.js  shell.ts
static/js/features/stream/: encoder-properties.js  encoder-properties.ts  geometry.js  geometry.ts  peer-connection.js  peer-connection.ts  settings-panel.js  settings-panel.ts  stream-state.js  stream.js  stream.ts  view.js  view.ts
static/js/features/system/: system-panel.js  system-panel.ts
static/js/features/tasks/: task-manager.js  task-manager.ts
static/js/modules/: audio-worklet-processor.js  audio.js  camera.js  connection.js  dom.js  file.js  input-render.js  input.js  nav.js  shell.js  shortcuts.js  stream.js  system.js  task.js  utils.js
static/js/pages/: login.js  login.ts
static/js/shared/: api.js  api.ts  context-menu.js  context-menu.ts  dom-helpers.js  dom-helpers.ts  feedback.js  feedback.ts  format.js  icons.js  icons.ts  list-manager.js  list-manager.ts  media-session.ts  modal.js  modal.ts  peer-signaling.ts  selection-manager.js  selection-manager.ts  types.ts
static/src/: app.ts
static/src/core/: navigation.ts  shortcuts.ts  socket-events.ts  socket.ts
static/src/features/audio/: audio-manager.ts  audio-worklet-processor.ts
static/src/features/camera/: camera.ts
static/src/features/files/: breadcrumbs.ts  drop-zone.ts  file-list-renderer.ts  file-manager.ts  path-utils.ts  upload-service.ts
static/src/features/input/: capture-state.ts  input-grid.ts  keyboard-shortcuts.ts  pointer-input.ts
static/src/features/shell/: shell.ts
static/src/features/stream/: encoder-properties.ts  geometry.ts  peer-connection.ts  settings-panel.ts  stream-state.ts  stream.ts  view.ts
static/src/features/system/: system-panel.ts
static/src/features/tasks/: task-manager.ts
static/src/pages/: login.ts
static/src/shared/: api.ts  dom-helpers.ts  feedback.ts  format.ts  list-manager.ts  media-session.ts  peer-signaling.ts  selection-manager.ts  types.ts
templates/: index.html  login.html
