[package]
name = "remote-control"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 0
debug = 0
strip = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 16
panic = "abort"
strip = true

[dependencies]
# --- Web Server & Async Runtime ---
axum = { version = "0.8", features = ["ws", "multipart", "macros"] }
tokio = { version = "1", features = ["full", "sync"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "auth"] }

# --- Realtime (Socket.IO) ---
socketioxide = { version = "0.16", features = ["state", "extensions"] }

# --- Serialization & Data ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- Security (Auth) ---
jsonwebtoken = "9.3"
bcrypt = "0.15"
rand = "0.8"

# --- Utilities & Error Handling ---
thiserror = "2.0" # Simplifies custom error creation
anyhow = "1.0"    # Generic error handling
once_cell = "1.21"
dotenvy = "0.15"  # Load .env files


tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
whoami = "2.0"
local-ip-address = "0.6.9"
sysinfo = "0.37"
portable-pty = "0.9"
image = "0.25"
base64 = "0.22"
tokio-stream = { version = "0.1.18", features = ["sync"] }
futures = "0.3"
async-stream = "0.3"
windows-capture = "2.0.0-alpha.7"
jpeg-encoder = "0.7"
fast_image_resize = "6.0.0"
crossbeam-channel = "0.5.15"
turbojpeg = "1.3.3"
zip = "7.2.0"
serde_qs = "0.15.0"
uuid = { version = "1.19", features = ["v4"] }
tokio-util = { version = "0.7", features = ["io"] }
mime_guess = "2.0.5"
chrono = { version = "0.4.43", features = ["serde"] }

# --- Windows System API ---
[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_SystemInformation",
]
