[package]
name = "remote-control"
version = "0.1.0"
edition = "2024"

[profile.dev]
debug = 0
strip = true

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
# --- Web Server & Async Runtime ---
axum = { version = "0.8", features = ["ws", "multipart", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "auth"] }

# --- Realtime ---
socketioxide = { version = "0.18", features = ["state", "extensions"] }

# --- Serialization & Data ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "1.1"

# --- Network ---
ureq = { version = "3", features = ["json"] }
local-ip-address = "0.6"

# --- Security (Auth) ---
hmac = "0.12"
sha2 = "0.10"
bcrypt = "0.19"

# --- Utilities ---
thiserror = "2.0"
anyhow = "1.0"
once_cell = "1.21"
dotenvy = "0.15"
regex = "1.12"

# --- System & Media ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
whoami = "2.0"
sysinfo = "0.39"
portable-pty = "0.9"
base64 = "0.22"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
futures-core = "0.3"
async-stream = "0.3"
turbojpeg = "1.3"
zip = { version = "8.6", default-features = false }
uuid = { version = "1.19", features = ["v4"] }
tokio-util = { version = "0.7", features = ["io"] }
mime_guess = "2.0"
jiff = { version = "0.2", default-features = false, features = ["std"] }
fast_image_resize = "6.0"
crossbeam-channel = "0.5"
hostname = "0.4"
cpal = "0.17"
crossbeam-queue = "0.3"

# --- Windows System API ---
[target.'cfg(windows)'.dependencies]
windows-capture = "2.0.0-alpha.7"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_SystemInformation",
    "Win32_System_Registry",
    "Win32_System_Power",
]

# --- Linux Portal / PipeWire ---
[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.13.10", default-features = false, features = ["tokio", "screencast", "remote_desktop"] }
pipewire = "0.9.2"
xkeysym = "0.2.1"
zbus = { version = "5.15", default-features = false, features = ["tokio"] }
