[package]
name = "remote-control"
version = "0.1.0"
edition = "2024"

[profile.dev]
debug = 0
strip = true

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
# --- Web Server & Async Runtime ---
axum = { version = "0.8", features = ["ws", "multipart", "macros"] }
axum-extra = { version = "0.12", default-features = false, features = [
    "form",
] } # TODO: remove once axum 0.9 has native Form with serde_html_form
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "auth"] }

# --- Realtime ---
socketioxide = { version = "0.18", features = ["state", "extensions"] }

# --- Serialization & Data ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- Network ---
minreq = { version = "2", features = ["https-rustls", "json-using-serde"] }

# --- Security (Auth) ---
hmac = "0.13"
sha2 = "0.11"

# --- Utilities ---
thiserror = "2.0"
anyhow = "1.0"
regex = "1"
walkdir = "2"
parking_lot = "0.12"

# --- System & Media ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
whoami = "2.0"
sysinfo = "0.39"
portable-pty = "0.9"
base64 = "0.22"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
zip = { version = "8.6", default-features = false }
uuid = { version = "1.19", features = ["v4"] }
tokio-util = { version = "0.7", features = ["io"] }
mime_guess = "2.0"
time = { version = "0.3", default-features = false, features = ["std", "local-offset"] }
hostname = "0.4"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
fast_image_resize = "6"
tempfile = "3"

# --- GStreamer ---
gstreamer = { version = "0.25", features = ["v1_20"] }
gstreamer-app = "0.25"
gstreamer-webrtc = { version = "0.25", features = ["v1_18"] }
gstreamer-sdp = "0.25"

# --- Windows System API ---
[target.'cfg(windows)'.dependencies]
windows-capture = "2"
wasapi = "0.23"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_SystemInformation",
    "Win32_System_Registry",
    "Win32_System_Power",
]

# --- Linux Portal / PipeWire ---
[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.13", default-features = false, features = ["tokio", "screencast", "remote_desktop"] }
pipewire = { version = "0.10", features = ["v0_3_49"] }
xkeysym = "0.2"
zbus = { version = "5", default-features = false, features = ["tokio"] }
